<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 控件上的Text -->
    <string name="app_name">multgas</string>
    <string name="hello_world"></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_general_satuation">GeneralSatuation</string>
    <string name="string_none" />
    <string name="string_zero">0</string>
    <string name="undefinition">未定义</string>
    <string name="normalStringComplete">完成</string>
    <string name="normalStringOK">确定</string>
    <string name="MainAct_GenSat_Button_Text">概况</string>
    <string name="GenSat_O2_TextView_Init">氧传感器状态( O2 )：</string>
    <string name="GenSat_O2_TextView_Voltage">氧传感器原始值( O2 original value )：</string>
    <string name="GenSat_O2_TextView_Percent">氧气含量( O2 percent )：</string>
    <string name="GenSat_CO_TextView_Init">一氧化碳传感器状态( CO )：</string>
    <string name="GenSat_CO_TextView_Voltage">一氧化碳传感器原始值( O2 original value )：</string>
    <string name="GenSat_CO_TextView_PPM">一氧化碳含量( CO ppm )：</string>
    <string name="GenSat_CH4_TextView_Init">甲烷传感器状态( CH4 )：</string>
    <string name="GenSat_CH4_TextView_Voltage">甲烷传感器原始值( O2 original value )：</string>
    <string name="GenSat_CH4_TextView_Percent">甲烷含量( CH4 percent )：</string>
    <string name="GenSat_NO2_TextView_Init">二氧化氮传感器状态( NO2 )：</string>
    <string name="GenSat_NO2_TextView_Voltage">二氧化氮传感器原始值( O2 original value )：</string>
    <string name="GenSat_NO2_TextView_Percent">二氧化氮含量( NO2 percent )：</string>
    <string name="GenSat_Temperature_TextView_Status">温度传感器状态：</string>
    <string name="GenSat_Temperature_TextView_Data">当前温度：</string>
    <string name="GenSat_Digital_Potentiometer_TextView_Data">数字电位器设置值：</string>
    <string name="senser_status_off_line">离线</string>
    <string name="senser_status_on_line">在线</string>
    <string name="backoff">返回</string>
    <string name="button_return">返回</string>
    <string name="GenSat_Digital_Potentiometer_Init_Value">0Ω</string>
    <string name="System_Battery">电池电量：</string>
    <string name="System_Battery_Init">0</string>
    <string name="GenSat_Wifi_Status">wifi状态</string>
    <string name="GanSat_Wifi_Closed">wifi未打开</string>
    <string name="GanSat_Wifi_Opened">wifi已打开</string>
    <string name="GanSat_Wifi_Disconnect">wifi未连接</string>
    <string name="GanSat_Wifi_Connect">wifi已连接</string>
    <string name="title_activity_set_zero">SetZeroActivity</string>
    <string name="SetZero_SetZeroPoint_Button_O2">设置氧气0点</string>
    <string name="SetZero_SetSensitivity_Button_O2">设置氧气灵敏度</string>
    <string name="MainAct_Button_Calibration">校准</string>
    <string name="Start">设置</string>
    <string name="Stop">停止</string>
    <string name="SenserParamO2ZeroPiont">O2ZeroPoint</string>
    <string name="SenserParamO2Sensitivity">O2Sensitivity</string>
    <string name="SenserParamO2Ratio">O2Ratio</string>
    <string name="generalSettingButtonSetting">主界面</string>
    <string name="generalSettingButtonCalibration">校准</string>
    <string name="generalSettingButtonAlarmPointSetting">报警点设置</string>
    <string name="generalSettingButtonDatasavaFrequence">数据保存频率</string>
    <string name="generalsettingButtonDataUpload">数据上传</string>
    <string name="generalsettingButtonNetManage">网络管理</string>
    <string name="generalsettingButtonDeviceLog">设备日志</string>
    <string name="generalsettingButtonDeviceInformation">设备信息</string>
    <string name="generalsettingButtonWifiSetting">Wifi设置</string>
    <string name="generalsettingButtonServiceSetting">服务器设置</string>
    <string name="generalCalibrationButtonSetCO">校准一氧化碳</string>
    <string name="generalCalibrationButtonSetCH4">校准甲烷</string>
    <string name="generalCalibrationButtonSetO2">校准氧气</string>
    <string name="generalCalibrationButtonSetNO2">校准二氧化氮</string>
    <string name="calibrationCOTextviewSetZeropointTips">           请将设备置于通风处,设备将在180秒后自动记录当前一氧化碳值</string>
    <string name="calibrationO2TextviewTips">请通入浓度为99.9%的标准氮气</string>
    <string name="calibrationCOTextviewSetZeropointCountDown">5</string>
    <string name="generalcalibrationTextviewReturn">校准</string>
    <string name="generalAlarmPointTextViewReturn">报警点\n设置</string>
    <string name="generalAlarmPointButtonSetAlarmC0">设置一氧化碳报警点</string>
    <string name="generalAlarmPointButtonSetAlarmCH4">设置甲烷报警点</string>
    <string name="generalAlarmPointButtonSetAlarmNO2">设置二氧化氮报警点</string>
    <string name="generalAlarmPointButtonSetAlarmO2">设置氧气报警点</string>
    <string name="setAlarmPointButtonOK">完成</string>
    <string name="setDataSaveFreqTextviewReturn">数据\n保存\n频率</string>
    <string name="dataUploadTextviewReturn">数据\n上传</string>
    <string name="netManagerTextviewReturn">网络\n管理</string>
    <string name="deviceLogTextviewReturn">设备\n日志</string>
    <string name="deviceInformationTextviewReturn">设备\n信息</string>
    <string name="generalSatuationTextviewCO">CO</string>
    <string name="generalSatuationTextviewCH4">CH4</string>
    <string name="generalSatuationTextviewNO2">NO2</string>
    <string name="generalSatuationTextviewO2">O2</string>
    <string name="generalSatuationTextviewC0Value">0</string>
    <string name="generalSatuationTextviewGasInitValue">0</string>
    <string name="generalSatuationTextviewUnitPpm">PPM</string>
    <string name="generalSatuationTextviewUnitPrecent">%</string>
    <string name="generalSatuationTextviewAlarmPoint">报警</string>
    <string name="calibrationSetSensitivityTextViewTips">输入标定气体的浓度</string>
    <string name="CalibrationSetRatioTextViewTips">180秒后将自动标定灵敏度</string>
 	<string name="CalibrationChooseButtonSetSensitivity">设置灵敏度</string>
    <string name="CalibrationChooseButtonSetZeroPoint">设置零点</string>
    
    <!-- 文件路径 -->
    <string name="ReadAd7790Path">/sys/class/mult_gas/mult_gas/get_data</string>
    <string name="WriteAd7790Path">/sys/class/mult_gas/mult_gas/get_data</string>
    <string name="File_SetSensitivityFile">/MultGasDetecter/config1.cfg</string>
    <string name="File_SetZeroFile">/MultGasDetecter/config.cfg</string>
    <string name="File_Ratio_02">/MultGasDetecter/ratio.cfg</string>
    <string name="title_activity_general">GeneralActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_general_calibration">GeneralCalibration</string>
    <string name="title_activity_calibration_co">CalibrationCO</string>
    <string name="title_activity_calibration_ch4">CalibrationCH4</string>
    <string name="title_activity_calibration_no2">CalibrationNO2</string>
    <string name="title_activity_calibration_o2">CalibrationO2</string>
    <string name="title_activity_set_alarm_point_co">SetAlarmPointCO</string>
    <string name="title_activity_set_alarm_point_ch4">SetAlarmPointCH4</string>
    <string name="title_activity_set_alarm_point">SetAlarmPoint</string>
    <string name="title_activity_set_wifi">SetWifi</string>
    <string name="title_activity_set_data_save_freq">SetDataSaveFreq</string>
    <string name="title_activity_data_upload">DataUpload</string>
    <string name="title_activity_net_manager">NetManager</string>
    <string name="title_activity_device_log">DeviceLog</string>
    <string name="title_activity_device_information">DeviceInformation</string>
    <string name="title_activity_gas_set_zero">GasSetZero</string>
    <string name="title_activity_calibration_set_sensitivity">CalibrationSetSensitivity</string>
    <string name="title_activity_calibration_set_ratio">CalibrationSetRatio</string>
    <string name="title_activity_calibration_choose">CalibrationChoose</string>
    <string name="title_activity_calibration_choose_set_zero_point">CalibrationChooseSetZeroPoint</string>
    <string name="title_activity_calibration_choose_set_sen">CalibrationChooseSetSen</string>

    <!-- 数据库上 -->
    <!-- 数据库表名 -->
    <string name="DataBaseTble">gas_data</string>
    <string name="title_activity_device_log_read_page">DeviceLogReadPage</string>

</resources>
