<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/normal_background"
    tools:context="com.bohua.multgas.NetManager"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/netmanager_button_return"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="67dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background = "@drawable/returnbutton"
        android:layout_marginTop="38dp"
        android:textSize="14sp"
        android:text="@string/netManagerTextviewReturn" />
    
     <Button
        android:id="@+id/generalsetting_button_wifi_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/netmanager_button_return"
        android:layout_marginTop="2dp"
        android:background="@drawable/chosebutton"
        android:text="@string/generalsettingButtonWifiSetting" />
     
     <Button
        android:id="@+id/generalsetting_button_service_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/generalsetting_button_wifi_setting"
        android:layout_marginTop="2dp"
        android:background="@drawable/chosebutton"
        android:text="@string/generalsettingButtonServiceSetting" />

  	 <TextView
        android:id="@+id/netmanager_testview_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/undefinition"
        android:textSize="15sp" />
    
  	 <TextView
        android:id="@+id/netmanager_textView_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/undefinition" 
        android:textSize="15sp"/> 
    
</RelativeLayout>

